# rust-mountains

./: README.md  mountains.proto
client/: Dockerfile  package.json
client/src/: client.js
kubernetes/: mountains-client.yaml  mountains-server.yaml
server/: .dockerignore  Cargo.toml  Dockerfile  Dockerfile-small  build.rs  mountains.proto
server-old/: Dockerfile-small
server/proto/: mountains.proto
server/src/: model.rs  mountains_server.rs  rectange.rs
server/tests/: example_test.rs
