[package]
name = "server"
version = "0.1.0"
authors = ["Jonathan Johnson <jonathan.johnson@dijure.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "mountains_server"
path = "src/mountains_server.rs"

[dependencies]
prost = "0.6.1"
tonic = {version="0.3.1", features = ["tls"]}
tokio = { version = "0.2", features = ["rt-threaded", "time", "stream", "fs", "macros", "uds"] }
futures = { version = "0.3.0", default-features = false, features = ["alloc"] }

[build-dependencies]
tonic-build = "0.3.1"
