[package]
name = "server"
version = "0.2.0"
authors = ["Jonathan Johnson <jonathan.johnson@dijure.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "mountains_server"
path = "src/mountains_server.rs"

[dependencies]
prost = "0.13.3"
tonic = {version="0.12.3", features = ["tls"]}
tokio = { version = "1.40", features = ["rt-threaded", "time", "stream", "fs", "macros", "uds"] }
futures = { version = "0.3.31", default-features = false, features = ["alloc"] }

[build-dependencies]
tonic-build = "0.12.3"
